# TPM

./: CMakeLists.txt  TPM.c  TPM_init.c  encrypt_decrypt.c  genCrypto.cpp  genCrypto_esapi.c  import_key.c  init.c  load_and_sign.c  sign.c
